[package]
name = "ethereum-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.0", features = ["legacy"] }
eyre = "0.6.8"
tokio = { version = "1.23.0", features = ["full"] }
